# newEpDataExtract

./: .gitignore  CMakeLists.txt  main.C
MCShape/: co60_specs.root  co60_specs_guwq.root  getMCShape.C  globals.h  globals.txt  highShape.txt  lossShape.txt
include/: MCShape.h  aLSData.h  aRunData.h  myFunction.h  myPdf.h
src/: MCShape.cc  aLSData.cc  aRunData.cc  myFunction.cc  myPdf.cc
test/: test.C
